# decentraland-crypto-rust

./: .env  .gitignore  Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
.cargo/: config.toml.example
.github/: dependabot.yml
.github/workflows/: main.yml  release.yml
account/: enum.DelegationPayloadError.html  index.html  struct.Address.html  struct.EIP1271Signature.html  struct.EphemeralPayload.html
authenticator/: index.html
contracts/: SignatureValidator.json
dcl_crypto/: all.html  index.html  sidebar-items.js  trait.Web3Transport.html
dcl_crypto/account/: constant.PERSONAL_SIGNATURE_SIZE.html  enum.DecodeHexError.html  enum.DelegationPayloadError.html  enum.EphemeralPayloadError.html  fn.decode.html  fn.decode_to_slice.html  index.html  sidebar-items.js  struct.Account.html  struct.Address.html  struct.EIP1271Signature.html  struct.EphemeralPayload.html  struct.Expiration.html  struct.PersonalSignature.html  trait.Signer.html  type.EIP1654Signature.html
dcl_crypto/authenticator/: enum.AuthenticatorError.html  index.html  sidebar-items.js  struct.Authenticator.html  struct.WithoutTransport.html
dcl_crypto/chain/: enum.AuthLink.html  index.html  sidebar-items.js  struct.AuthChain.html
dcl_crypto/identity/: index.html  struct.Identity.html
dcl_crypto/rpc/: enum.RPCCallError.html  fn.rpc_call_is_valid_signature.html  index.html  sidebar-items.js
decentraland_crypto/: all.html  index.html  sidebar-items.js
src/: account.rs  authenticator.rs  chain.rs  identity.rs  lib.rs  rpc.rs  util.rs
(+77 files in other folders)
