[package]
name = "decentraland-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
rust-crypto = "0.2.36"
web3 = "0.18.0"
chrono = "0.4.23"
futures = "0.3.26"
thiserror = "1.0.40"
regex = "1.7.1"
lazy_static = "1.4.0"
tokio-test = "0.4.2"

[dev-dependencies]
tokio = "1.27.0"
tokio-test = "0.4.2"
