[package]
name = "dcl-crypto"
version = "0.0.0-development"
edition = "2021"
description = "Tools to create and validate Decentraland's Authentication Chains."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
rust-crypto = "0.2.36"
web3 = "0.19.0"
chrono = "0.4.23"
futures = "0.3.26"
thiserror = "1.0.40"
regex = "1.7.1"
lazy_static = "1.4.0"
secp256k1 = { version = "0.27.0", features = ["global-context", "rand-std", "recovery"] }
ethabi = "18.0.0"
jsonrpc-core = "18.0.0"
rand = "0.8.5"

[dev-dependencies]
tokio = "1.27.0"
tokio-test = "0.4.2"
